# autonomous_quadruped

./: README.md  install_ros_packages.sh
devel/: .catkin
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/.private/controller_pkg/: .catkin  .rosinstall  local_setup.sh
devel/.private/controller_pkg/lib/controller_pkg/: controller_node  state_machine_node
devel/.private/controller_pkg/lib/pkgconfig/: controller_pkg.pc
devel/.private/controller_pkg/share/controller_pkg/cmake/: controller_pkgConfig.cmake
devel/.private/depth_image_proc/: .catkin  .rosinstall  local_setup.sh
devel/.private/depth_image_proc/lib/pkgconfig/: depth_image_proc.pc
devel/.private/depth_image_proc/share/depth_image_proc/cmake/: depth_image_procConfig.cmake
devel/.private/fla_msgs/: .catkin  local_setup.sh  setup.sh
devel/.private/fla_msgs/lib/pkgconfig/: fla_msgs.pc
devel/.private/fla_msgs/share/fla_msgs/cmake/: fla_msgs-msg-extras.cmake  fla_msgs-msg-paths.cmake  fla_msgsConfig.cmake
devel/.private/fla_utils/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/fla_utils/lib/fla_utils/: interpolate_imu  laserscan_to_pointcloud
devel/.private/fla_utils/lib/pkgconfig/: fla_utils.pc
devel/.private/fla_utils/share/fla_utils/cmake/: fla_utilsConfig.cmake
devel/.private/mav_comm/: .catkin  local_setup.sh
devel/.private/mav_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/mav_msgs/lib/pkgconfig/: mav_msgs.pc
devel/.private/mav_msgs/share/mav_msgs/cmake/: mav_msgs-msg-extras.cmake  mav_msgs-msg-paths.cmake  mav_msgsConfig.cmake
devel/.private/mav_planning_msgs/: .catkin  local_setup.sh
devel/.private/mav_planning_msgs/lib/pkgconfig/: mav_planning_msgs.pc
devel/.private/mav_planning_msgs/share/mav_planning_msgs/cmake/: mav_planning_msgs-msg-paths.cmake  mav_planning_msgsConfig.cmake
devel/.private/mav_state_machine_msgs/: .catkin  local_setup.sh
devel/.private/mav_state_machine_msgs/lib/pkgconfig/: mav_state_machine_msgs.pc
devel/.private/mav_system_msgs/: .catkin  .rosinstall
devel/.private/mav_system_msgs/lib/pkgconfig/: mav_system_msgs.pc
devel/.private/nav_msgs/: .catkin
devel/.private/nav_msgs/lib/pkgconfig/: nav_msgs.pc
devel/.private/perception/: .catkin  .rosinstall  setup.sh
devel/.private/perception/lib/perception/: depth_to_pointcloud  pointcloud_world
devel/.private/perception/lib/pkgconfig/: perception.pc
devel/.private/planning/: .catkin  setup.sh
devel/.private/planning/lib/pkgconfig/: planning.pc
devel/.private/planning/lib/planning/: planner  planning_node
devel/.private/point_cloud_filter/: .catkin  local_setup.sh
devel/.private/point_cloud_filter/lib/pkgconfig/: point_cloud_filter.pc
devel/.private/point_cloud_filter/lib/point_cloud_filter/: point_cloud_filter_node
devel/.private/simulation/: .catkin  .rosinstall  local_setup.sh
devel/.private/simulation/lib/pkgconfig/: simulation.pc
devel/.private/simulation/lib/simulation/: state_estimate_corruptor_node  unity_ros  w_to_unity
devel/.private/state_indicator_msgs/: .catkin  local_setup.sh  setup.sh
devel/.private/state_indicator_msgs/include/state_indicator_msgs/: state_indicator.h
devel/.private/state_indicator_msgs/lib/pkgconfig/: state_indicator_msgs.pc
devel/.private/trajectory_planning/: .catkin  .rosinstall  setup.sh
devel/.private/trajectory_planning/lib/pkgconfig/: trajectory_planning.pc
devel/.private/trajectory_planning/lib/trajectory_planning/: trajectory_node  trajectory_planner
devel/lib/simulation/RoboDog_Build_Data/: globalgamemanagers  level0  sharedassets0.assets
src/controller_pkg/: CMakeLists.txt  package.xml
src/controller_pkg/launch/: controller_offline.launch  controller_online.launch
src/controller_pkg/src/: controller_node.cpp  controller_node_PID.cpp  state_machine_offline_node.cpp  state_machine_online_node.cpp
src/mav_comm/state_indicator_msgs/: CMakeLists.txt
src/perception/: CMakeLists.txt  package.xml
src/perception/global_map/: global_map_modify.py  modified_global_map.pgm  modified_global_map.yaml  my_map4.pgm  my_map4.yaml
src/perception/launch/: perception.launch
src/planning/: CMakeLists.txt
src/planning/launch/: planning_offline.launch  planning_online.launch
src/planning/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml
src/planning/src/: planning_offline_node.cpp  planning_online_node.cpp  trajectory_publisher_node.cpp
src/simulation/: CMakeLists.txt
src/simulation/launch/: Sim.rviz  simulation_offline.launch  simulation_online.launch  unity_ros.launch
src/trajectory_planning/: CMakeLists.txt  package.xml
src/trajectory_planning/launch/: trajectory_planning.launch
src/trajectory_planning/msg/: TrajectoryInfo.msg
src/trajectory_planning/src/: trajectory_node.cpp
(+36 files in other folders)
